--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,22 +36,15 @@
         {% block content %}{% endblock %}
 
 
-        <footer class="footer text-center">
+        <footer class="footer text-center" style="background-color: #dee2e6; padding: 2rem 0 1.5rem 0; margin-top: 0;">
             <div class="container px-4 px-lg-5">
-                <!-- <ul class="list-inline mb-5">
-                    <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-facebook"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-twitter"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white" href="#!"><i class="icon-social-github"></i></a>
-                    </li>
-                </ul> -->
-                <p class="text-muted small mb-0">Copyright &copy; Veritas 2025</p>
-            </div>
+            <p class="fs-5 fw-bold mb-0 text-dark">Copyright &copy; Veritas 2025</p>
+        </div>
         </footer>
+
+
+
+
         <!-- Scroll to Top Button-->
         <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
         <!-- Bootstrap core JS-->
@@ -60,5 +53,16 @@
         <!-- <script src="js/scripts.js"></script> -->
         <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
+
+        <!-- Bloco de scroll automático para facto gerado no "Gerar Facto"
+        <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const factoCard = document.getElementById("facto-gerado-card");
+            if (factoCard) {
+                factoCard.scrollIntoView({ behavior: 'smooth' });
+            }
+        });
+        </script> -->
+
     </body>
 </html>
